[gd_scene load_steps=11 format=3 uid="uid://dweqco604i5ny"]

[ext_resource type="Texture2D" uid="uid://bbxguo0kie5pw" path="res://Graphics/Sign.png" id="1_lvtii"]
[ext_resource type="Texture2D" uid="uid://dmyjqwtuqq1s" path="res://Graphics/SelectArrow.png" id="2_gqrvy"]
[ext_resource type="Script" path="res://Resources/sign.gd" id="2_y8kpi"]
[ext_resource type="Texture2D" uid="uid://brd7ocnaxoufo" path="res://Graphics/Press E.png" id="4_884wp"]
[ext_resource type="Texture2D" uid="uid://bsgyt1mg2s357" path="res://Graphics/Shadow.png" id="5_l25sx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wkgij"]
radius = 35.0571

[sub_resource type="Animation" id="Animation_qrkho"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="Animation" id="Animation_14w7b"]
resource_name = "bounce"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(0, -16), Vector2(0, -14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_46hl2"]
_data = {
"RESET": SubResource("Animation_qrkho"),
"bounce": SubResource("Animation_14w7b")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_on3v7"]
size = Vector2(14, 22)

[node name="Sign" type="Area2D"]
script = ExtResource("2_y8kpi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 18)
shape = SubResource("CircleShape2D_wkgij")

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(0, -16)
texture = ExtResource("2_gqrvy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrow"]
autoplay = "bounce"
libraries = {
"": SubResource("AnimationLibrary_46hl2")
}

[node name="Sign" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("1_lvtii")

[node name="PressE" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(0, 16)
texture = ExtResource("4_884wp")

[node name="RespawnPosition" type="Node2D" parent="."]
position = Vector2(0, 18)

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 11)
scale = Vector2(0.975, 0.658537)
texture = ExtResource("5_l25sx")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_on3v7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
